# tarot

./: README.md  pyproject.toml
scripts/: amt.sh  bac.sh  imdb.sh  ppo-dpo.sh
src/: adversarial_evaluation.py  create_dpo_dataset.py  evaluate_obfuscation.py  train_dpo.py
tarot/: create_authorship_classifier.py  create_utility_classifier.py  generate_obfuscation.py  logger.py  train_ppo.py  utils.py
